--- a/README
+++ b/README
@@ -1,4 +1,3 @@
 Dependencies:
 
-pip3 install --upgrade google-api-python-client
-pip3 install --upgrade google-auth google-auth-oauthlib google-auth-httplib2
+pip3 install --upgrade google-api-python-client google-auth google-auth-oauthlib google-auth-httplib2
